--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@ layout: default
 {% include nav.html %}
 
 {% assign section = site.sections | find: "id", "header" %}
-{% include header.html section=section %}
+<header>
+    <div class="header-content">
+        <div class="header-content-inner">
+            <h1>{{ section.title }}</h1>
+            <hr>
+            <p>{{ section.output }}</p>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll">{{ section.CTA }}</a>
+        </div>
+    </div>
+</header>
+
 
 {% include about.html %}
 {% include services.html %}
