--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 {% include nav.html %}
 
-{% assign section = site.sections | find: "id", "header" %}
+{% assign section = site.sections | where: "id", "header" | first %}
 <header>
     <div class="header-content">
         <div class="header-content-inner">
