--- a/spa.html
+++ b/spa.html
@@ -7,6 +7,7 @@ permalink: /spa/
 
 
 <iframe src="https://www.supersaas.fr/schedule/thomasWajs2/Sauna"
- width="100%"
- height="100%"
+    width="100%"
+    height="100%"
+    style="background: white;"
 ></iframe>
