Better tenant zone

--- a/tenant.html
+++ b/tenant.html
@@ -10,8 +10,8 @@ permalink: /tenant/
     <div class="row">
         <div class="col-sm-6 text-center">
             <a href="/shop/">
-                <div class="service-box">
-                    <i class="fas fa-8x fa-spa text-primary" ></i>
+                <div class="service-box tenant">
+                    <i class="fas fa-8x fa-concierge-bell text-primary" ></i>
                     <h3>Achat de services</h3>
                 </div>
             </a>
@@ -20,8 +20,8 @@ permalink: /tenant/
         
         <div class="col-sm-6 text-center">
             <a href="/spa/">
-                <div class="service-box">
-                    <i class="fas fa-8x fa-concierge-bell text-primary"></i>
+                <div class="service-box tenant">
+                    <i class="fas fa-8x fa-spa text-primary"></i>
                     <h3>Réservation SPA</h3>
                 </div>
             </a>
