Better tenant zone

--- a/tenant.html
+++ b/tenant.html
@@ -6,7 +6,7 @@ permalink: /tenant/
 {% include tenant_nav.html %}
 
 
-<div class="container">
+<div class="container" id="tenantHome">
     <div class="row">
         <div class="col-sm-6 text-center">
             <a href="/shop/">
