Better tenant zone

--- a/tenant.html
+++ b/tenant.html
@@ -9,7 +9,7 @@ permalink: /tenant/
 <div class="container" id="tenantHome">
     <div class="row">
         <div class="col-sm-6 text-center">
-            <a href="/shop/">
+            <a href="/store/">
                 <div class="service-box tenant">
                     <i class="fas fa-8x fa-concierge-bell text-primary" ></i>
                     <h3>Achat de services</h3>
