--- a/store.html
+++ b/store.html
@@ -5,7 +5,10 @@ permalink: /store/
 
 {% include tenant_nav.html %}
 
-<div id="my-store-62666003" id="tenantStore"></div>
+<div id="tenantStore">
+    <div id="my-store-62666003"></div>
+</div>
+
 
 <div>
 <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?62666003&data_platform=code&data_date=2021-06-28" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-62666003");</script>
