Refactor for comeeting

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: default
 ---
 
-{% include nav.html %}
-{% include header.html %}
-{% include about.html %}
-{% include services.html %}
-{% include photos.html %}
-{% include prices.html %}
-{% include booklet.html %}
+{% include landing/nav.html %}
+{% include landing/header.html %}
+{% include landing/about.html %}
+{% include landing/services.html %}
+{% include landing/photos.html %}
+{% include landing/prices.html %}
+{% include landing/booklet.html %}
 {% include contact.html %}
 {% include legals.html %}
