--- a/comeeting.html
+++ b/comeeting.html
@@ -6,8 +6,9 @@ permalink: /comeeting/
 {% include comeeting/nav.html %}
 {% include comeeting/header.html %}
 {% include comeeting/about.html %}
-{% include comeeting/services.html %}
 {% include comeeting/photos.html %}
+{% include comeeting/capacity.html %}
+{% include comeeting/services.html %}
 {% include comeeting/prices.html %}
 {% include contact.html %}
 {% include legals.html %}
