--- a/comeeting.html
+++ b/comeeting.html
@@ -10,5 +10,5 @@ permalink: /comeeting/
 {% include comeeting/capacity.html %}
 {% include comeeting/services.html %}
 {% include comeeting/prices.html %}
-{% include contact.html %}
+{% include contact.html phone=site.data.global.comeeting_phone %}
 {% include legals.html %}
