--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ layout: default
 {% include landing/photos.html %}
 {% include landing/prices.html %}
 {% include landing/booklet.html %}
-{% include contact.html %}
+{% include contact.html phone=site.data.global.phone %}
 {% include legals.html %}
