--- a/comeeting.html
+++ b/comeeting.html
@@ -11,4 +11,5 @@ permalink: /comeeting/
 {% include comeeting/services.html %}
 {% include comeeting/prices.html %}
 {% include contact.html phone=site.data.global.comeeting_phone %}
+{% include comeeting/cgv.html %}
 {% include legals.html %}
