--- a/comeeting.html
+++ b/comeeting.html
@@ -9,6 +9,7 @@ permalink: /comeeting/
 {% include comeeting/photos.html %}
 {% include comeeting/capacity.html %}
 {% include comeeting/services.html %}
+{% include comeeting/reviews.html %}
 {% include comeeting/prices.html %}
 {% include contact.html phone=site.data.global.comeeting_phone %}
 {% include comeeting/cgv.html %}
