Fix calendar nav

--- a/comeeting_calendar.html
+++ b/comeeting_calendar.html
@@ -1,9 +1,9 @@
 ---
-layout: tenant
+layout: default
 permalink: /comeeting_calendar/
 ---
 
-{% include comeeting/nav.html %}
+{% include comeeting/calendar_nav.html %}
 
 <iframe src="https://www.supersaas.fr/schedule/74mademoiselle/Co-Meeting"
     width="100%"
